force-app/main/default/objects/Assign_user__c/Assign_user__c.object-meta.xml
<CustomObject>
    <label>Assign user</label>
    <nameField>
        <label>Assign user Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assign users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>