force-app/main/default/objects/Assign_user__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Assign users</relationshipLabel>
    <relationshipName>Assign_users</relationshipName>
    <type>Lookup</type>
</CustomField>