force-app/main/default/objects/Assign_user__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Assign users</relationshipLabel>
    <relationshipName>Assign_users</relationshipName>
    <type>Lookup</type>
</CustomField>