force-app/main/default/objects/Assign_user__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Assign users</relationshipLabel>
    <relationshipName>Assign_users</relationshipName>
    <type>Lookup</type>
</CustomField>